footer ja mõned stiilimuutused

--- a/avaleht.html
+++ b/avaleht.html
@@ -70,7 +70,7 @@
                 </tr>
                 <tr>
                     <td><img src="pildid/kodu.png" alt="koduleht:" class=kontaktikoon></td>
-                    <td class=kontakttekst><a href="https://www.loomadevarjupaik.eu/">www.loomadevarjupaik.eu</a></td>
+                    <td class=kontakttekst><a href="https://www.loomadevarjupaik.eu/" target="_blank">www.loomadevarjupaik.eu</a></td>
                 </tr>
             </table>
         </div>
@@ -95,7 +95,7 @@
                 </tr>
                 <tr>
                     <td><img src="pildid/kodu.png" alt="koduleht:" class=kontaktikoon></td>
-                    <td class=kontakttekst><a href="https://varjupaik.ee/et">www.varjupaik.ee</a></td>
+                    <td class=kontakttekst><a href="https://varjupaik.ee/et" target="_blank">www.varjupaik.ee</a></td>
                 </tr>
             </table>
         </div>
@@ -120,7 +120,7 @@
                 </tr>
                 <tr>
                     <td><img src="pildid/kodu.png" alt="koduleht:" class=kontaktikoon></td>
-                    <td class=kontakttekst><a href="https://varjupaik.ee/et">www.varjupaik.ee</a></td>
+                    <td class=kontakttekst><a href="https://varjupaik.ee/et" target="_blank">www.varjupaik.ee</a></td>
                 </tr>
             </table>
         </div>
@@ -128,7 +128,8 @@
         <br>
         <div id=footer>
             <div id=footer-content>
-                <p class= footertekst>See lehekülg valmis sissejuhatus erialasse projekti raames</p>
+                <p class= footertekst>See lehekülg valmis aine "Sissejuhatus erialasse" projekti raames 2021. aastal.
+                Autorid: Roberta Pärna, Priidik Meelo Västrik ja Meeri-Ly Muru</p>
             </div>
         </div>  
         <script  src="script.js"></script>
