--- a/info.html
+++ b/info.html
@@ -116,7 +116,8 @@
         <br>
         <div id=footer>
             <div id=footer-content>
-                <p class= footertekst>See lehekülg valmis sissejuhatus erialasse projekti raames</p>
+                <p class= footertekst>See lehekülg valmis aine "Sissejuhatus erialasse" projekti raames 2021. aastal.
+                    Autorid: Roberta Pärna, Priidik Meelo Västrik ja Meeri-Ly Muru</p>
             </div>
         </div>    
     </body>
